--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,4 @@
 .idea/
 .DS_Store
 peacock_ml.egg-info/
-peacock_ml/__pycache__/
-peacock_ml/biaised_data/__pycache__/
-peacock_ml/data_generator/__pycache__/
-peacock_ml/uncertainty/__pycache__/
+__pycache__
